--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "preinst": "npm install -g bun && yarn install && bun install --yarn",
+    "clean": "rm -rf dist && echo 'Done.'",
     "devs": "npx tinacms dev -c \"astro dev --port 8080\"",
     "build": "tinacms build && astro build",
     "preview": "astro preview",
@@ -40,6 +41,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@rollup/plugin-yaml": "^4.1.2",
     "@tailwindcss/typography": "0.5.10",
